[package]
name = "ciso"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Security",
    "Win32_System_IO",
    "Win32_Storage_FileSystem"
]

[profile.release]
opt-level = "z"
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
codegen-units = 1
